--- a/angular-blog/package.json
+++ b/angular-blog/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "deploy:ghdocs": "ng build --output-path docs --base-href /Bootcamp-Potencia-Tech-Angular-Developer-Powered-by-iFood-DIO/angular-blog/"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
